[package]
name = "corona-data"
version = "0.1.0"
authors = ["Arno Kamphuis <ik@arnokamphuis.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
curl = "0.4.34"
plotly = "0.6.0"
csv = "1.1.5"
linreg = "0.2.0"
dot = "0.1.4"